syntax = "proto3";
package flamegraphpb;

// Regenerate with protoc --gogofast_out=plugins=grpc:. flamegraphpb.proto --proto_path=../vendor/ --proto_path=.
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";

// Version
service FlamegraphV1 {
    rpc GetVersion (google.protobuf.Empty) returns (ProtocolVersionResponse) {}
    rpc SendFlamegraph (FlameGraphNode) returns (google.protobuf.Empty) {}
    rpc SendMetricsStats (MultiMetricStats) returns (google.protobuf.Empty) {}
}

message ProtocolVersionResponse {
    int64 version = 1;
}

message FlameGraphNode {
    uint64 Id = 1;
    string Cluster = 2;
    string Name  = 3;
    uint64 Total = 4;
    uint64 Value = 5;
    int64 ModTime = 6;
    int64 RdTime = 7;
    int64 ATime = 8;
    uint64 Count = 9;
    repeated FlameGraphNode Children = 10;
    repeated uint64 ChildrenIds = 11;
    uint64 ParentID = 12;
}

message MetricStats {
    string Cluster = 1;
    string Path = 2;
    int64 ModTime = 3;
    int64 ATime = 4;
    int64 RdTime = 5;
    int64 Size = 6;
    int64 Count = 7;
}

message MultiMetricStats {
    repeated MetricStats metrics = 1 [(gogoproto.nullable) = false];
}